# Log_esphome_web

./: .gitignore  README.md  _download_static.py  install.sh  main.py  pyproject.toml
app/: __init__.py  api.py  db.py  routes.py  sockets.py
static/css/: fonts.css  style.css
static/js/: app.js
templates/: index.html
